--- a/index.html
+++ b/index.html
@@ -49,7 +49,53 @@
         <button class="home__contact">contact me!</button>
     </section>
     <!--  about-->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+         <p>나는 지금까지 너무 많은 시간들을 낭비해왔고 후회도 많이 했었다. 괴거 순간들을 회상하면서 '이럴 때 이런 선택을 했으면 더 좋은 현재가 됐을텐데' 하는 식으로 
+             하지만 지금 내가 개발공부에 지금까지 해왔던 모든 행위들을 뛰어넘는 열정을 가지고 개발자의 꿈을 가지게 된 현재 상황을 볼 때 그런 과거의 선택들이 어쩌면 지금
+             을 위해 행해졌던 나의 선택들이 아니였나 싶다. 나는 지금 부터 앞으로 나아갈 것이고 멈추지 않을 것이다. 마지막으로 내가 가장 좋아하고 인상깊게 읽었던 책의 구절을 하나 넣어 볼까 한다.
+             "그리하여 우리는 조류를 거스르는 배처럼 끊임없이 과거로 떠밀려 가면서도 앞으로 앞으로 계속 나아가는 것이다." - 위대한 개츠비 中
+         </p>
+         <div class="about__majors">
+             <div class="major">
+                 <div class="major__icon"></div>
+                 <i class="fa-brands fa-html5"></i>
+                 <div class="major__title">html</div>
+                 <div class="major__description">아직은 이것밖에 <br />못합니다..</div>
+             </div>
+         </div>
+         <div class="about__majors">
+            <div class="major">
+                <div class="major__icon"></div>
+                <i class="fa-brands fa-html5"></i>
+                <div class="major__title">html</div>
+                <div class="major__description">아직은 이것밖에 <br />못합니다..</div>
+            </div>
+        </div>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon"></div>
+                <i class="fa-brands fa-html5"></i>
+                <div class="major__title">html</div>
+                <div class="major__description">아직은 이것밖에 <br />못합니다..</div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="imgs/jobs/스크린샷 2022-04-27 오후 4.22.50.png" alt="송곡고등학교" class="job__logo">
+                <p class="job__name">송곡대학교</p>
+                <p class="jom__period">2017~2019</p>
+
+                <div class="about__jobs">
+                    <div class="job">
+                        <img src="imgs/jobs/스크린샷 2022-04-27 오후 4.23.32.png" alt="신한대학교" class="job__logo2">
+                        <p class="job__name">신한대학교</p>
+                        <p class="jom__period">2020~2021</p>
+            </div>
+            <div class="job"></div>
+
+        </div>
+    </section>
     <!-- skiils -->
     <section id="skills"></section>
     <!-- work -->
