--- a/index.html
+++ b/index.html
@@ -97,7 +97,92 @@
         </div>
     </section>
     <!-- skiils -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills&Attribute</h2>
+        <p>사실은 지금 할 줄 아는게 아무것도 없습니다.<br />하지만 지금부터 Html,Css 부터 시작해서 Javascript 같은 모든 기술을 활용할 에정입니다.</p>
+        <div class="skillset">
+            <div class="skiilset__left">
+                <h3 class="skllset__title">skills</h3>
+                <div class="skill">
+                <div class="skill__description">
+                    <span>Html</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill__description">
+                    <span>Html</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                </div>
+            </div><div class="skill">
+                <div class="skill__description">
+                    <span>Html</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                </div>
+            </div><div class="skill">
+                <div class="skill__description">
+                    <span>Html</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                </div>
+            </div><div class="skill">
+                <div class="skill__description">
+                    <span>Html</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                </div>
+            </div><div class="skill">
+                <div class="skill__description">
+                    <span>Html</span>
+                    <span>99%</span>
+                </div>
+                <div class="skill__bar">
+                    <div class="skill__value"></div>
+                </div>
+                </div>
+            </div>
+            <div class="skillset__light">
+                <div class="Tools">
+                    <h3 class="skllset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Intellij</span></li>
+                        <li><span>Android Studio Code</span></li>
+                        <li><span>Ios development tools</span></li>
+                        <li><span>Sketch app</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skllset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                        <li><span>scrum Master</span></li>
+                        <li><span>Math</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+          
     <!-- work -->
     <section id="wokr"></section>
     <!-- testimonials -->
