--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="about__jobs">
             <div class="job">
                 <img src="imgs/jobs/스크린샷 2022-04-27 오후 4.22.50.png" alt="송곡고등학교" class="job__logo">
-                <p class="job__name">송곡대학교</p>
+                <p class="job__name">송곡고등학교</p>
                 <p class="jom__period">2017~2019</p>
 
                 <div class="about__jobs">
@@ -184,9 +184,141 @@
     </section>
           
     <!-- work -->
-    <section id="wokr"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All <span class="category__count">8</span></button>
+
+            <button class="category__btn">Front-end <span class="category__count">3</span></button>
+
+            <button class="category__btn">Back-end <span class="category__count">3</span></button>
+
+            <button class="category__btn">Mobile <span class="category__count">2</span></button>
+        </div>
+        <div class="wokr__projects">
+            <a 
+            href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+            class="project"
+            target="blank"
+            >
+        <img class="project__img"
+        src="imgs/projects/project1.png" alt="youtube">
+        <div class="project__description">
+            <h3>youtube Site</h3>
+            <span>Clone coding with HTML and CSS</span>
+        </div>
+    </a>
+    <a 
+    href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+    class="project"
+    target="blank"
+    >
+<img class="project__img" src="imgs/projects/project2.png" alt="youtube">
+<div class="project__description">
+    <h3>일단 채워넣자 </h3>
+    <span>일단 채우자</span>
+</div>
+</a>   
+<a 
+href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+class="project"
+target="blank"
+>
+<img class="project__img" src="imgs/projects/project3.png" alt="youtube">
+<div class="project__description">
+<h3>youtube Site</h3>
+<span>Clone coding with HTML and CSS</span>
+</div>
+</a>   
+<a 
+href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+class="project"
+target="blank"
+>
+<img class="project__img" src="imgs/projects/project4.png" alt="youtube">
+<div class="project__description">
+<h3>youtube Site</h3>
+<span>Clone coding with HTML and CSS</span>
+</div>
+</a>   
+<a 
+href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+class="project"
+target="blank"
+>
+<img class="project__img" src="imgs/projects/project5.png" alt="youtube">
+<div class="project__description">
+<h3>youtube Site</h3>
+<span>Clone coding with HTML and CSS</span>
+</div>
+</a>   
+<a 
+href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+class="project"
+target="blank"
+>
+<img class="project__img" src="imgs/projects/project6.png" alt="youtube">
+<div class="project__description">
+<h3>youtube Site</h3>
+<span>Clone coding with HTML and CSS</span>
+</div>
+</a>  
+ <a 
+href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+class="project"
+target="blank"
+>
+<img class="project__img" src="imgs/projects/project7.png" alt="youtube">
+<div class="project__description">
+<h3>youtube Site</h3>
+<span>Clone coding with HTML and CSS</span>
+</div>
+</a>   
+<a 
+href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
+class="project"
+target="blank"
+>
+<img class="project__img" src="imgs/projects/project8.png" alt="youtube">
+<div class="project__description">
+<h3>youtube Site</h3>
+<span>Clone coding with HTML and CSS</span>
+</div>
+</a>
+
+        </div>
+    </section>
     <!-- testimonials -->
-    <section id="Testimonials"></section>
+    <section id="Testimonials">
+        <h1>testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img 
+                src="imgs/testimonial/elon musk.png" 
+                alt="일론머스크" 
+                class="testimonial__avatar"> 
+                <div class="testimonial__speech-bubble">
+                    <p>내 차를 좋아해줘서 고마워 너가 개발자로서 성공하면 공짜로 하나줄께~</p>
+                    <p class="name"><a href="">musk</a>Tesla</p>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img 
+                src="imgs/testimonial/김다미.png" 
+                alt="김다미" 
+                class="testimonial__avatar"> 
+                <div class="testimonial__speech-bubble">
+                    <p>언제나 나의 작품을 빠지지 않고 다 봐줘서 고마워 ㅎㅎ</p>
+                    <p class="name"><a href="">dami</a>그해우리는</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <!-- contact -->
     <section id="contact"></section>
 </body> 
