--- a/index.html
+++ b/index.html
@@ -320,6 +320,19 @@ target="blank"
 
     </section>
     <!-- contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">rlarlfyd1258@naver.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/kim-ki-ryong/portfolio" target="_blank">
+            <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fab fa-github"></i>
+        </div>
+        <p class="contact__rights">
+            2022 Dream coding kiryong - All ringhts reserved
+        </p>
+    </section>
 </body> 
 </html> 
