--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
         <button class="home__contact">contact me!</button>
     </section>
     <!--  about-->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
-         <p>나는 지금까지 너무 많은 시간들을 낭비해왔고 후회도 많이 했었다. 괴거 순간들을 회상하면서 '이럴 때 이런 선택을 했으면 더 좋은 현재가 됐을텐데' 하는 식으로 
-             하지만 지금 내가 개발공부에 지금까지 해왔던 모든 행위들을 뛰어넘는 열정을 가지고 개발자의 꿈을 가지게 된 현재 상황을 볼 때 그런 과거의 선택들이 어쩌면 지금
-             을 위해 행해졌던 나의 선택들이 아니였나 싶다. 나는 지금 부터 앞으로 나아갈 것이고 멈추지 않을 것이다. 마지막으로 내가 가장 좋아하고 인상깊게 읽었던 책의 구절을 하나 넣어 볼까 한다.
-             "그리하여 우리는 조류를 거스르는 배처럼 끊임없이 과거로 떠밀려 가면서도 앞으로 앞으로 계속 나아가는 것이다." - 위대한 개츠비 中
+         <p>dddd
          </p>
          <div class="about__majors">
              <div class="major">
-                 <div class="major__icon"></div>
+                 <div class="major__icon">
                  <i class="fa-brands fa-html5"></i>
-                 <div class="major__title">html</div>
-                 <div class="major__description">아직은 이것밖에 <br />못합니다..</div>
+                 </div>
+                 <h2 class="major__title">html</h2>
+                 <p class="major__description">아직은 이것밖에 <br />못합니다..</p>
              </div>
          </div>
          <div class="about__majors">
             <div class="major">
-                <div class="major__icon"></div>
+                <div class="major__icon">
                 <i class="fa-brands fa-html5"></i>
-                <div class="major__title">html</div>
-                <div class="major__description">아직은 이것밖에 <br />못합니다..</div>
+                </div>
+                <h2 class="major__title">html</h2>
+                <p class="major__description">아직은 이것밖에 <br />못합니다..</p>
             </div>
         </div>
         <div class="about__majors">
             <div class="major">
-                <div class="major__icon"></div>
+                <div class="major__icon">
                 <i class="fa-brands fa-html5"></i>
-                <div class="major__title">html</div>
-                <div class="major__description">아직은 이것밖에 <br />못합니다..</div>
+                </div>
+                <h2 class="major__title">html</h2>
+                <p class="major__description">아직은 이것밖에 <br />못합니다..</p>
             </div>
         </div>
         <div class="about__jobs">
@@ -99,7 +99,7 @@
         </div>
     </section>
     <!-- skiils -->
-    <section id="skills">
+    <section id="skills" class="section section__container">
         <h1>Skills</h1>
         <h2>Skills&Attribute</h2>
         <p>사실은 지금 할 줄 아는게 아무것도 없습니다.<br />하지만 지금부터 Html,Css 부터 시작해서 Javascript 같은 모든 기술을 활용할 에정입니다.</p>
@@ -186,7 +186,7 @@
     </section>
           
     <!-- work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>projects</h3>
         <div class="work__categories">
@@ -292,7 +292,7 @@ target="blank"
         </div>
     </section>
     <!-- testimonials -->
-    <section id="Testimonials">
+    <section id="Testimonials" class="section">
         <h1>testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -322,7 +322,7 @@ target="blank"
 
     </section>
     <!-- contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">rlarlfyd1258@naver.com</h2>
         <div class="contact__links">
