--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <h1>My work</h1>
         <h3>projects</h3>
         <div class="work__categories">
-            <button class="category__btn">All <span class="category__count">8</span></button>
+            <button class="category__btn active">All <span class="category__count">8</span></button>
 
             <button class="category__btn">Front-end <span class="category__count">3</span></button>
 
@@ -216,7 +216,7 @@
 
             <button class="category__btn">Mobile <span class="category__count">2</span></button>
         </div>
-        <div class="wokr__projects">
+        <div class="work__projects">
             <a 
             href="https://www.youtube.com/watch?v=RvHZrhJ_tSw&list=RDRvHZrhJ_tSw&start_radio=1" 
             class="project"
