--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ target="blank"
         </div>
     </section>
     <!-- testimonials -->
-    <section id="Testimonials" class="section">
+    <section id="testimonials" class="section">
         <h1>testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
@@ -321,20 +321,21 @@ target="blank"
                 class="testimonial__avatar"> 
                 <div class="testimonial__speech-bubble">
                     <p>내 차를 좋아해줘서 고마워 너가 개발자로서 성공하면 공짜로 하나줄께~</p>
-                    <p class="name"><a href="">musk</a>Tesla</p>
+                    <p class="name"><a href="">musk / </a>Tesla</p>
                 </div>
             </div>
         </div>
         <div class="testimonials">
             <div class="testimonial">
+                 
+                <div class="testimonial__speech-bubble">
+                    <p>언제나 나의 작품을 빠지지 않고 다 봐줘서 고마워 ㅎㅎ</p>
+                    <p class="name"><a href="">dami /   </a>그해우리는</p>
+                </div>
                 <img 
                 src="imgs/testimonial/김다미.png" 
                 alt="김다미" 
-                class="testimonial__avatar"> 
-                <div class="testimonial__speech-bubble">
-                    <p>언제나 나의 작품을 빠지지 않고 다 봐줘서 고마워 ㅎㅎ</p>
-                    <p class="name"><a href="">dami</a>그해우리는</p>
-                </div>
+                class="testimonial__avatar">
             </div>
         </div>
 
