--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
     <!-- Navar -->
     <nav id="navbar">
-    <div class="navar__logo">
+    <div class="navbar__logo">
     <img class="logo"
           src="imgs/favicon.png">
-    <a href="#">giryong</a>
+    <a href="#">Gi ryong</a>
     </div>
     <div class="navbar__menu">
     <ul class="navbar__menu">
@@ -40,6 +40,11 @@
         <li class="navbar__menu__item">Contact</li>
     </ul>
 </div>
+
+<!-- Toggle button -->
+<button class="navbar__toggle-btn">
+    <i class="fa-solid fa-bars"></i>
+</button>
 </nav>
     <!-- Home -->
     <section id="home">
