--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;1,400&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
     
 </head>
