--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     </div>
     <div class="navbar__menu">
     <ul class="navbar__menu">
-        <li class="navbar__menu__item active">Home</li>
-        <li class="navbar__menu__item">About</li>
-        <li class="navbar__menu__item">Skills</li>
-        <li class="navbar__menu__item">My work</li>
-        <li class="navbar__menu__item">Testimonial</li>
-        <li class="navbar__menu__item">Contact</li>
+        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item"data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">My work</li>
+        <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
     </ul>
 </div>
 
@@ -52,7 +52,7 @@
         alt="kkam's photo" 
         class="home__avatar"> 
         <h1 class="home__title">hello, <br />I'm kiryong coder!</h1>
-        <h2 class="home__description">모든 언어를 다루고, 어떠한 기술도 빨리 습득해 적용해 나가고싶은 최고의 개발자 지망생 이올시다</h2>
+        <h2 class="home__description">모든 언어를 다루고, 어떠한 기술도 빨리 습득해 적용해 나가고싶은 최고의 개발자 지망생 입니다</h2>
         <button class="home__contact">contact me!</button>
     </section>
     <!--  about-->
