Js.Home transparent

--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
 </nav>
     <!-- Home -->
     <section id="home">
-        <img src="imgs/kkam.png" 
+        <div class="home__container">
+            <img src="imgs/kkam.png" 
         alt="kkam's photo" 
         class="home__avatar"> 
         <h1 class="home__title">hello, <br />I'm kiryong coder!</h1>
         <h2 class="home__description">모든 언어를 다루고, 어떠한 기술도 빨리 습득해 적용해 나가고싶은 최고의 개발자 지망생 입니다</h2>
-        <button class="home__contact">contact me!</button>
+        <button class="home__contact" >contact me!</button>
+        </div>
     </section>
     <!--  about-->
     <section id="about" class="section section__container">
