--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="about__jobs">
             <div class="job">
-                <img src="imgs/jobs/스크린샷 2022-04-27 오후 4.22.50.png" 
+                <img src="imgs/jobs/school.png" 
                      alt="송곡고등학교" 
                      class="job__logo">
                      <div class="job__description">
@@ -104,7 +104,7 @@
 </div>
                 <div class="about__jobs">
                     <div class="job">
-                        <img src="imgs/jobs/스크린샷 2022-04-27 오후 4.23.32.png" 
+                        <img src="imgs/jobs/school2.png" 
                              alt="신한대학교" 
                              class="job__logo2">
                              <div class="job__description">
